minor correction in the update button and overlapping of text box

--- a/syles/homepage.css
+++ b/syles/homepage.css
@@ -52,9 +52,12 @@ body{
 }
 .added-person button{
     max-width: 150px;
-    min-width: 100px;
+    min-width: 60px;
     width:10vw;
     height: 50px;
+}
+.data-edit input{
+    width: 50%;
 }
 .person-delete{
     background-color: rgb(153, 40, 40);
@@ -66,7 +69,6 @@ body{
     display: flex;
     justify-content: space-between;
 }
-
 .added-name{
     width: 60%;
 }
@@ -79,9 +81,9 @@ body{
     display: none;
 }
 .added-person-data{
-    width: 60%;
+    width: 65%;
+ min-height: 40px;
 }
 .added-person-button{
-    width: 30vw;
-    margin-left: auto;
+    max-width: 40%;
 }
